Display cycle once it is loaded to avoid FOUC (consider wrapping in component)

--- a/apps/jobs/stylesheets/index.styl
+++ b/apps/jobs/stylesheets/index.styl
@@ -17,6 +17,10 @@ scroll-offset = 40px
   margin 40px 0
   // 10:4 ratio
   padding-bottom 40%
+  opacity 0
+  &.is-loaded
+    transition opacity 1s
+    opacity 1
 
 .jobs-category-section
   clearfix()
